--- a/package.json
+++ b/package.json
@@ -9,13 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "expo": "~44.0.2",
+    "expo-barcode-scanner": "~11.2.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-aws3": "^0.0.9",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-signature-canvas": "^4.3.0",
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "0.17.1",
+    "react-native-webview": "11.15.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
