updated icons and splash screen, and deployed to apple

--- a/app.json
+++ b/app.json
@@ -10,6 +10,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
@@ -21,6 +24,7 @@
     },
     "android": {
       "package": "com.jonsthewebguy.dbentoby"
-    }
+    },
+    "description": ""
   }
 }
